// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`model loads: packages 1`] = `
Object {
  "entities": Array [
    Object {
      "metadata": Object {
        "UI": Object {
          "edit": Array [],
          "embedded": Array [],
          "hidden": Array [],
          "list": Array [],
          "listName": Array [
            "title",
          ],
          "quickSearch": Array [],
          "show": Array [],
        },
        "acl": Object {
          "create": Array [],
          "delete": Array [],
          "read": Array [],
          "upadte": Array [],
        },
        "name": Object {
          "plural": "MediaFiles",
          "singular": "MediaFiles",
        },
        "persistence": Object {
          "indexes": Object {
            "id": Object {
              "fields": Object {
                "id": 1,
              },
              "name": "id",
              "options": Object {
                "unique": true,
              },
            },
          },
        },
        "titlePlural": "MediaFiles",
      },
      "name": "MediaFiles",
      "props": Array [
        Object {
          "name": "title",
        },
        Object {
          "name": "description",
        },
        Object {
          "name": "reference",
        },
        Object {
          "name": "catalog",
        },
        Object {
          "name": "id",
        },
      ],
    },
  ],
  "packages": Array [],
}
`;

exports[`model loads: repository 1`] = `
MetaModel {
  "$obj": Object {
    "directives": Map {},
    "entities": Map {
      "MediaFiles" => Entity {
        "$obj": Object {
          "abstract": false,
          "embedded": false,
          "fields": Map {
            "title" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "list": false,
                "name": "title",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "MediaFiles",
                "order": 0,
                "persistence": Object {},
              },
            },
            "description" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "list": false,
                "name": "description",
                "type": "RichText",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "MediaFiles",
                "order": 1,
                "persistence": Object {},
              },
            },
            "reference" => EntityField {
              "$obj": Object {
                "args": Map {},
                "derived": false,
                "list": false,
                "name": "reference",
                "relation": HasOne {
                  "$obj": Object {
                    "entity": "MediaFiles",
                    "field": "reference",
                    "hasOne": EntityReference {
                      "$obj": Object {
                        "backField": "id",
                        "entity": "Image",
                        "field": "id",
                      },
                      "metadata_": Object {},
                    },
                  },
                  "metadata_": Object {
                    "name": Object {
                      "full": "MediaFilesHasOneReference",
                      "normal": "MediaFilesReference",
                      "short": "Reference",
                    },
                    "persistence": Object {
                      "embedded": true,
                      "single": true,
                      "stored": false,
                    },
                    "verb": "HasOne",
                  },
                },
                "type": Object {
                  "multiplicity": "one",
                  "name": "Image",
                  "type": "entity",
                },
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "MediaFiles",
                "order": 2,
                "persistence": Object {},
              },
            },
            "catalog" => EntityField {
              "$obj": Object {
                "args": Map {},
                "derived": false,
                "list": false,
                "name": "catalog",
                "relation": HasMany {
                  "$obj": Object {
                    "entity": "MediaFiles",
                    "field": "catalog",
                    "hasMany": EntityReference {
                      "$obj": Object {
                        "backField": "id",
                        "entity": "Image",
                        "field": "id",
                      },
                      "metadata_": Object {},
                    },
                  },
                  "metadata_": Object {
                    "name": Object {
                      "full": "MediaFilesHasManyCatalogs",
                      "normal": "MediaFilesCatalogs",
                      "short": "Catalogs",
                    },
                    "persistence": Object {
                      "embedded": true,
                      "single": false,
                      "stored": false,
                    },
                    "verb": "HasMany",
                  },
                },
                "type": Object {
                  "multiplicity": "many",
                  "name": "Image",
                  "type": "entity",
                },
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "MediaFiles",
                "order": 3,
                "persistence": Object {},
              },
            },
            "id" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "idKey": EntityReference {
                  "$obj": Object {
                    "backField": "id",
                    "entity": "mediaFiles",
                    "field": "id",
                  },
                  "metadata_": Object {},
                },
                "list": false,
                "name": "id",
                "type": "ID",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "mediaFiles",
                "persistence": Object {
                  "identity": true,
                  "indexed": true,
                  "required": true,
                },
              },
            },
          },
          "identity": Set {
            "id",
          },
          "implements": Set {},
          "indexed": Set {
            "id",
          },
          "name": "MediaFiles",
          "operations": Map {},
          "relations": Set {
            "reference",
            "catalog",
          },
          "required": Set {
            "id",
          },
        },
        "metadata_": Object {
          "UI": Object {
            "edit": Array [],
            "embedded": Array [],
            "hidden": Array [],
            "list": Array [],
            "listName": Array [
              "title",
            ],
            "quickSearch": Array [],
            "show": Array [],
          },
          "acl": Object {
            "create": Array [],
            "delete": Array [],
            "read": Array [],
            "upadte": Array [],
          },
          "name": Object {
            "plural": "MediaFiles",
            "singular": "MediaFiles",
          },
          "persistence": Object {
            "indexes": Object {
              "id": Object {
                "fields": Object {
                  "id": 1,
                },
                "name": "id",
                "options": Object {
                  "unique": true,
                },
              },
            },
          },
          "titlePlural": "MediaFiles",
        },
      },
      "Image" => Entity {
        "$obj": Object {
          "abstract": false,
          "embedded": true,
          "fields": Map {
            "width" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "list": false,
                "name": "width",
                "type": "Int",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "Image",
                "order": 0,
                "persistence": Object {},
              },
            },
            "height" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "list": false,
                "name": "height",
                "type": "Int",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "Image",
                "order": 1,
                "persistence": Object {},
              },
            },
            "src" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "idKey": EntityReference {
                  "$obj": Object {
                    "entity": "Image",
                    "field": "src",
                  },
                  "metadata_": Object {},
                },
                "inheritedFrom": "IFile",
                "list": false,
                "name": "src",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "Image",
                "order": 2,
                "persistence": Object {
                  "identity": true,
                  "indexed": true,
                  "required": true,
                },
              },
            },
            "type" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "inheritedFrom": "IFile",
                "list": false,
                "name": "type",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "Image",
                "order": 3,
                "persistence": Object {},
              },
            },
            "path" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "inheritedFrom": "IFile",
                "list": false,
                "name": "path",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "Image",
                "order": 4,
                "persistence": Object {},
              },
            },
            "name" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "inheritedFrom": "IFile",
                "list": false,
                "name": "name",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "Image",
                "order": 5,
                "persistence": Object {},
              },
            },
            "id" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "idKey": EntityReference {
                  "$obj": Object {
                    "backField": "id",
                    "entity": "image",
                    "field": "id",
                  },
                  "metadata_": Object {},
                },
                "list": false,
                "name": "id",
                "type": "ID",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "image",
                "persistence": Object {
                  "identity": true,
                  "indexed": true,
                  "required": true,
                },
              },
            },
          },
          "identity": Set {
            "src",
            "id",
          },
          "implements": Set {
            "IFile",
          },
          "indexed": Set {
            "src",
            "id",
          },
          "name": "Image",
          "operations": Map {},
          "relations": Set {},
          "required": Set {
            "src",
            "id",
          },
        },
        "metadata_": Object {
          "UI": Object {
            "edit": Array [],
            "embedded": Array [],
            "hidden": Array [],
            "list": Array [],
            "listName": Array [
              "src",
            ],
            "quickSearch": Array [],
            "show": Array [],
          },
          "acl": Object {
            "create": Array [],
            "delete": Array [],
            "read": Array [],
            "upadte": Array [],
          },
          "name": Object {
            "plural": "Images",
            "singular": "Image",
          },
          "persistence": Object {
            "indexes": Object {
              "id": Object {
                "fields": Object {
                  "id": 1,
                },
                "name": "id",
                "options": Object {
                  "unique": true,
                },
              },
              "src": Object {
                "fields": Object {
                  "src": 1,
                },
                "name": "src",
                "options": Object {
                  "sparse": true,
                  "unique": true,
                },
              },
            },
          },
          "titlePlural": "Images",
        },
      },
      "IFile" => Entity {
        "$obj": Object {
          "abstract": true,
          "embedded": false,
          "fields": Map {
            "src" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "idKey": EntityReference {
                  "$obj": Object {
                    "entity": "IFile",
                    "field": "src",
                  },
                  "metadata_": Object {},
                },
                "list": false,
                "name": "src",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "IFile",
                "order": 0,
                "persistence": Object {
                  "identity": true,
                  "indexed": true,
                  "required": true,
                },
              },
            },
            "type" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "list": false,
                "name": "type",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "IFile",
                "order": 1,
                "persistence": Object {},
              },
            },
            "path" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "list": false,
                "name": "path",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "IFile",
                "order": 2,
                "persistence": Object {},
              },
            },
            "name" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "list": false,
                "name": "name",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "IFile",
                "order": 3,
                "persistence": Object {},
              },
            },
            "id" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "idKey": EntityReference {
                  "$obj": Object {
                    "backField": "id",
                    "entity": "iFile",
                    "field": "id",
                  },
                  "metadata_": Object {},
                },
                "list": false,
                "name": "id",
                "type": "ID",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "iFile",
                "persistence": Object {
                  "identity": true,
                  "indexed": true,
                  "required": true,
                },
              },
            },
          },
          "identity": Set {
            "src",
            "id",
          },
          "implements": Set {},
          "indexed": Set {
            "src",
            "id",
          },
          "name": "IFile",
          "operations": Map {},
          "relations": Set {},
          "required": Set {
            "src",
            "id",
          },
        },
        "metadata_": Object {
          "UI": Object {
            "edit": Array [],
            "embedded": Array [],
            "hidden": Array [],
            "list": Array [],
            "listName": Array [
              "src",
            ],
            "quickSearch": Array [],
            "show": Array [],
          },
          "acl": Object {
            "create": Array [],
            "delete": Array [],
            "read": Array [],
            "upadte": Array [],
          },
          "name": Object {
            "plural": "IFiles",
            "singular": "IFile",
          },
          "persistence": Object {
            "indexes": Object {
              "id": Object {
                "fields": Object {
                  "id": 1,
                },
                "name": "id",
                "options": Object {
                  "unique": true,
                },
              },
              "src": Object {
                "fields": Object {
                  "src": 1,
                },
                "name": "src",
                "options": Object {
                  "sparse": true,
                  "unique": true,
                },
              },
            },
          },
          "titlePlural": "IFiles",
        },
      },
      "User" => Entity {
        "$obj": Object {
          "abstract": false,
          "description": "person role to be user identified in the system",
          "embedded": false,
          "fields": Map {
            "userName" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "idKey": EntityReference {
                  "$obj": Object {
                    "entity": "User",
                    "field": "userName",
                  },
                  "metadata_": Object {},
                },
                "list": false,
                "name": "userName",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "User",
                "order": 0,
                "persistence": Object {
                  "identity": true,
                  "indexed": true,
                  "required": true,
                },
              },
            },
            "password" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "list": false,
                "name": "password",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "User",
                "order": 1,
                "persistence": Object {},
              },
            },
            "isAdmin" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "list": false,
                "name": "isAdmin",
                "type": "Boolean",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "User",
                "order": 2,
                "persistence": Object {},
              },
            },
            "isSystem" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "list": false,
                "name": "isSystem",
                "type": "Boolean",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "User",
                "order": 3,
                "persistence": Object {},
              },
            },
            "enabled" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "list": false,
                "name": "enabled",
                "type": "Boolean",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "User",
                "order": 4,
                "persistence": Object {},
              },
            },
            "id" => SimpleField {
              "$obj": Object {
                "args": Map {},
                "idKey": EntityReference {
                  "$obj": Object {
                    "backField": "id",
                    "entity": "user",
                    "field": "id",
                  },
                  "metadata_": Object {},
                },
                "list": false,
                "name": "id",
                "type": "ID",
              },
              "metadata_": Object {
                "acl": Object {
                  "create": Array [],
                  "delete": Array [],
                  "read": Array [],
                  "upadte": Array [],
                },
                "entity": "user",
                "persistence": Object {
                  "identity": true,
                  "indexed": true,
                  "required": true,
                },
              },
            },
          },
          "identity": Set {
            "userName",
            "id",
          },
          "implements": Set {},
          "indexed": Set {
            "userName",
            "id",
          },
          "name": "User",
          "operations": Map {},
          "relations": Set {},
          "required": Set {
            "userName",
            "id",
          },
        },
        "metadata_": Object {
          "UI": Object {
            "edit": Array [],
            "embedded": Array [],
            "hidden": Array [],
            "list": Array [],
            "listName": Array [
              "userName",
            ],
            "quickSearch": Array [],
            "show": Array [],
          },
          "acl": Object {
            "create": Array [],
            "delete": Array [],
            "read": Array [],
            "upadte": Array [],
          },
          "name": Object {
            "plural": "Users",
            "singular": "User",
          },
          "persistence": Object {
            "indexes": Object {
              "id": Object {
                "fields": Object {
                  "id": 1,
                },
                "name": "id",
                "options": Object {
                  "unique": true,
                },
              },
              "userName": Object {
                "fields": Object {
                  "userName": 1,
                },
                "name": "userName",
                "options": Object {
                  "sparse": true,
                  "unique": true,
                },
              },
            },
          },
          "titlePlural": "Users",
        },
      },
    },
    "enums": Map {},
    "mixins": Map {},
    "mutations": Map {},
    "name": "education",
    "packages": Map {},
    "queries": Map {},
    "relations": Map {
      "MediaFiles" => Map {
        "reference" => EntityField {
          "$obj": Object {
            "args": Map {},
            "derived": false,
            "list": false,
            "name": "reference",
            "relation": HasOne {
              "$obj": Object {
                "entity": "MediaFiles",
                "field": "reference",
                "hasOne": EntityReference {
                  "$obj": Object {
                    "backField": "id",
                    "entity": "Image",
                    "field": "id",
                  },
                  "metadata_": Object {},
                },
              },
              "metadata_": Object {
                "name": Object {
                  "full": "MediaFilesHasOneReference",
                  "normal": "MediaFilesReference",
                  "short": "Reference",
                },
                "persistence": Object {
                  "embedded": true,
                  "single": true,
                  "stored": false,
                },
                "verb": "HasOne",
              },
            },
            "type": Object {
              "multiplicity": "one",
              "name": "Image",
              "type": "entity",
            },
          },
          "metadata_": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "MediaFiles",
            "order": 2,
            "persistence": Object {},
          },
        },
        "catalog" => EntityField {
          "$obj": Object {
            "args": Map {},
            "derived": false,
            "list": false,
            "name": "catalog",
            "relation": HasMany {
              "$obj": Object {
                "entity": "MediaFiles",
                "field": "catalog",
                "hasMany": EntityReference {
                  "$obj": Object {
                    "backField": "id",
                    "entity": "Image",
                    "field": "id",
                  },
                  "metadata_": Object {},
                },
              },
              "metadata_": Object {
                "name": Object {
                  "full": "MediaFilesHasManyCatalogs",
                  "normal": "MediaFilesCatalogs",
                  "short": "Catalogs",
                },
                "persistence": Object {
                  "embedded": true,
                  "single": false,
                  "stored": false,
                },
                "verb": "HasMany",
              },
            },
            "type": Object {
              "multiplicity": "many",
              "name": "Image",
              "type": "entity",
            },
          },
          "metadata_": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "MediaFiles",
            "order": 3,
            "persistence": Object {},
          },
        },
      },
      "Image" => Map {},
      "IFile" => Map {},
      "User" => Map {},
    },
    "scalars": Map {},
    "store": "model.json",
    "unions": Map {},
  },
  "metadata_": Object {},
  "store": "default.json",
}
`;

exports[`model loads: repository.toObject 1`] = `
Object {
  "description": undefined,
  "directives": Array [],
  "entities": Array [
    Object {
      "abstract": false,
      "description": undefined,
      "embedded": false,
      "fields": Array [
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "MediaFiles",
          "identity": false,
          "indexed": false,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "MediaFiles",
            "order": 0,
            "persistence": Object {},
          },
          "name": "title",
          "order": 0,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": undefined,
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "MediaFiles",
          "identity": false,
          "indexed": false,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "MediaFiles",
            "order": 1,
            "persistence": Object {},
          },
          "name": "description",
          "order": 1,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": "RichText",
        },
        Object {
          "args": Object {},
          "derived": false,
          "description": undefined,
          "entity": "MediaFiles",
          "identity": false,
          "indexed": false,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "MediaFiles",
            "order": 2,
            "persistence": Object {},
          },
          "name": "reference",
          "order": 2,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": Object {
            "multiplicity": "one",
            "name": "Image",
            "type": "entity",
          },
        },
        Object {
          "args": Object {},
          "derived": false,
          "description": undefined,
          "entity": "MediaFiles",
          "identity": false,
          "indexed": false,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "MediaFiles",
            "order": 3,
            "persistence": Object {},
          },
          "name": "catalog",
          "order": 3,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": Object {
            "multiplicity": "many",
            "name": "Image",
            "type": "entity",
          },
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "mediaFiles",
          "identity": true,
          "indexed": true,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "mediaFiles",
            "persistence": Object {
              "identity": true,
              "indexed": true,
              "required": true,
            },
          },
          "name": "id",
          "order": undefined,
          "persistent": false,
          "required": true,
          "title": undefined,
          "type": "ID",
        },
      ],
      "implements": Array [],
      "metadata": Object {
        "UI": Object {
          "edit": Array [],
          "embedded": Array [],
          "hidden": Array [],
          "list": Array [],
          "listName": Array [
            "title",
          ],
          "quickSearch": Array [],
          "show": Array [],
        },
        "acl": Object {
          "create": Array [],
          "delete": Array [],
          "read": Array [],
          "upadte": Array [],
        },
        "name": Object {
          "plural": "MediaFiles",
          "singular": "MediaFiles",
        },
        "persistence": Object {
          "indexes": Object {
            "id": Object {
              "fields": Object {
                "id": 1,
              },
              "name": "id",
              "options": Object {
                "unique": true,
              },
            },
          },
        },
        "titlePlural": "MediaFiles",
      },
      "name": "MediaFiles",
      "operations": Array [],
      "title": undefined,
    },
    Object {
      "abstract": false,
      "description": undefined,
      "embedded": true,
      "fields": Array [
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "Image",
          "identity": false,
          "indexed": false,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "Image",
            "order": 0,
            "persistence": Object {},
          },
          "name": "width",
          "order": 0,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": "Int",
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "Image",
          "identity": false,
          "indexed": false,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "Image",
            "order": 1,
            "persistence": Object {},
          },
          "name": "height",
          "order": 1,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": "Int",
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "Image",
          "identity": true,
          "indexed": true,
          "inheritedFrom": "IFile",
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "Image",
            "order": 2,
            "persistence": Object {
              "identity": true,
              "indexed": true,
              "required": true,
            },
          },
          "name": "src",
          "order": 2,
          "persistent": false,
          "required": true,
          "title": undefined,
          "type": undefined,
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "Image",
          "identity": false,
          "indexed": false,
          "inheritedFrom": "IFile",
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "Image",
            "order": 3,
            "persistence": Object {},
          },
          "name": "type",
          "order": 3,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": undefined,
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "Image",
          "identity": false,
          "indexed": false,
          "inheritedFrom": "IFile",
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "Image",
            "order": 4,
            "persistence": Object {},
          },
          "name": "path",
          "order": 4,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": undefined,
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "Image",
          "identity": false,
          "indexed": false,
          "inheritedFrom": "IFile",
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "Image",
            "order": 5,
            "persistence": Object {},
          },
          "name": "name",
          "order": 5,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": undefined,
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "image",
          "identity": true,
          "indexed": true,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "image",
            "persistence": Object {
              "identity": true,
              "indexed": true,
              "required": true,
            },
          },
          "name": "id",
          "order": undefined,
          "persistent": false,
          "required": true,
          "title": undefined,
          "type": "ID",
        },
      ],
      "implements": Array [
        "IFile",
      ],
      "metadata": Object {
        "UI": Object {
          "edit": Array [],
          "embedded": Array [],
          "hidden": Array [],
          "list": Array [],
          "listName": Array [
            "src",
          ],
          "quickSearch": Array [],
          "show": Array [],
        },
        "acl": Object {
          "create": Array [],
          "delete": Array [],
          "read": Array [],
          "upadte": Array [],
        },
        "name": Object {
          "plural": "Images",
          "singular": "Image",
        },
        "persistence": Object {
          "indexes": Object {
            "id": Object {
              "fields": Object {
                "id": 1,
              },
              "name": "id",
              "options": Object {
                "unique": true,
              },
            },
            "src": Object {
              "fields": Object {
                "src": 1,
              },
              "name": "src",
              "options": Object {
                "sparse": true,
                "unique": true,
              },
            },
          },
        },
        "titlePlural": "Images",
      },
      "name": "Image",
      "operations": Array [],
      "title": undefined,
    },
    Object {
      "abstract": true,
      "description": undefined,
      "embedded": false,
      "fields": Array [
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "IFile",
          "identity": true,
          "indexed": true,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "IFile",
            "order": 0,
            "persistence": Object {
              "identity": true,
              "indexed": true,
              "required": true,
            },
          },
          "name": "src",
          "order": 0,
          "persistent": false,
          "required": true,
          "title": undefined,
          "type": undefined,
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "IFile",
          "identity": false,
          "indexed": false,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "IFile",
            "order": 1,
            "persistence": Object {},
          },
          "name": "type",
          "order": 1,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": undefined,
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "IFile",
          "identity": false,
          "indexed": false,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "IFile",
            "order": 2,
            "persistence": Object {},
          },
          "name": "path",
          "order": 2,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": undefined,
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "IFile",
          "identity": false,
          "indexed": false,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "IFile",
            "order": 3,
            "persistence": Object {},
          },
          "name": "name",
          "order": 3,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": undefined,
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "iFile",
          "identity": true,
          "indexed": true,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "iFile",
            "persistence": Object {
              "identity": true,
              "indexed": true,
              "required": true,
            },
          },
          "name": "id",
          "order": undefined,
          "persistent": false,
          "required": true,
          "title": undefined,
          "type": "ID",
        },
      ],
      "implements": Array [],
      "metadata": Object {
        "UI": Object {
          "edit": Array [],
          "embedded": Array [],
          "hidden": Array [],
          "list": Array [],
          "listName": Array [
            "src",
          ],
          "quickSearch": Array [],
          "show": Array [],
        },
        "acl": Object {
          "create": Array [],
          "delete": Array [],
          "read": Array [],
          "upadte": Array [],
        },
        "name": Object {
          "plural": "IFiles",
          "singular": "IFile",
        },
        "persistence": Object {
          "indexes": Object {
            "id": Object {
              "fields": Object {
                "id": 1,
              },
              "name": "id",
              "options": Object {
                "unique": true,
              },
            },
            "src": Object {
              "fields": Object {
                "src": 1,
              },
              "name": "src",
              "options": Object {
                "sparse": true,
                "unique": true,
              },
            },
          },
        },
        "titlePlural": "IFiles",
      },
      "name": "IFile",
      "operations": Array [],
      "title": undefined,
    },
    Object {
      "abstract": false,
      "description": "person role to be user identified in the system",
      "embedded": false,
      "fields": Array [
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "User",
          "identity": true,
          "indexed": true,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "User",
            "order": 0,
            "persistence": Object {
              "identity": true,
              "indexed": true,
              "required": true,
            },
          },
          "name": "userName",
          "order": 0,
          "persistent": false,
          "required": true,
          "title": undefined,
          "type": undefined,
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "User",
          "identity": false,
          "indexed": false,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "User",
            "order": 1,
            "persistence": Object {},
          },
          "name": "password",
          "order": 1,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": undefined,
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "User",
          "identity": false,
          "indexed": false,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "User",
            "order": 2,
            "persistence": Object {},
          },
          "name": "isAdmin",
          "order": 2,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": "Boolean",
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "User",
          "identity": false,
          "indexed": false,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "User",
            "order": 3,
            "persistence": Object {},
          },
          "name": "isSystem",
          "order": 3,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": "Boolean",
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "User",
          "identity": false,
          "indexed": false,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "User",
            "order": 4,
            "persistence": Object {},
          },
          "name": "enabled",
          "order": 4,
          "persistent": false,
          "required": false,
          "title": undefined,
          "type": "Boolean",
        },
        Object {
          "args": Object {},
          "defaultValue": undefined,
          "derived": false,
          "description": undefined,
          "entity": "user",
          "identity": true,
          "indexed": true,
          "inheritedFrom": undefined,
          "list": false,
          "metadata": Object {
            "acl": Object {
              "create": Array [],
              "delete": Array [],
              "read": Array [],
              "upadte": Array [],
            },
            "entity": "user",
            "persistence": Object {
              "identity": true,
              "indexed": true,
              "required": true,
            },
          },
          "name": "id",
          "order": undefined,
          "persistent": false,
          "required": true,
          "title": undefined,
          "type": "ID",
        },
      ],
      "implements": Array [],
      "metadata": Object {
        "UI": Object {
          "edit": Array [],
          "embedded": Array [],
          "hidden": Array [],
          "list": Array [],
          "listName": Array [
            "userName",
          ],
          "quickSearch": Array [],
          "show": Array [],
        },
        "acl": Object {
          "create": Array [],
          "delete": Array [],
          "read": Array [],
          "upadte": Array [],
        },
        "name": Object {
          "plural": "Users",
          "singular": "User",
        },
        "persistence": Object {
          "indexes": Object {
            "id": Object {
              "fields": Object {
                "id": 1,
              },
              "name": "id",
              "options": Object {
                "unique": true,
              },
            },
            "userName": Object {
              "fields": Object {
                "userName": 1,
              },
              "name": "userName",
              "options": Object {
                "sparse": true,
                "unique": true,
              },
            },
          },
        },
        "titlePlural": "Users",
      },
      "name": "User",
      "operations": Array [],
      "title": undefined,
    },
  ],
  "enums": Array [],
  "metadata": Object {},
  "mixins": Array [],
  "mutations": Array [],
  "name": "education",
  "packages": Array [],
  "queries": Array [],
  "title": undefined,
  "unions": Array [],
}
`;
